<resources>
    <string name="app_name">BarcodeReader</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read QRCode&quot; to read a barcode</string>
    <string name="read_barcode">Read QRCode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="ico_eye">&#xf06e;</string>
    <string name="ico_flash">&#xf0e7;</string>
    <string name="ico_close">&#xf00d;</string>
    <string name="ok">OK</string>
    <string name="scan_code">QRCode reader</string>
    <string name="scan_code_hint">Center the QR in the view</string>
    <string name="scan_qrcode_hint">Center the QR in the view</string>
</resources>
